[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/Nafees-font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/structure/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Nafees-half.tres" type="DynamicFont" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.364706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="RichTextLabel" parent="."]
margin_left = 758.5
margin_top = 171.991
margin_right = 1161.5
margin_bottom = 315.991
custom_fonts/normal_font = ExtResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Main"]
margin_left = 728.613
margin_top = 462.376
margin_right = 1179.61
margin_bottom = 604.376
custom_fonts/font = ExtResource( 1 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Main"]
margin_left = 728.613
margin_top = 632.91
margin_right = 1179.61
margin_bottom = 774.91
custom_fonts/font = ExtResource( 1 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Main"]
margin_left = 728.613
margin_top = 805.203
margin_right = 1179.61
margin_bottom = 947.203
custom_fonts/font = ExtResource( 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HSlider" parent="Settings"]
margin_left = 729.0
margin_top = 501.385
margin_right = 1162.0
margin_bottom = 593.385
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="Settings"]
margin_left = 729.0
margin_top = 643.385
margin_right = 1162.0
margin_bottom = 735.385
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="RichTextLabel" parent="Settings"]
margin_left = 792.213
margin_top = 462.376
margin_right = 1098.21
margin_bottom = 538.376
custom_fonts/normal_font = ExtResource( 3 )
text = "Master Volume"

[node name="MusicVolumeLabel" type="RichTextLabel" parent="Settings"]
margin_left = 808.799
margin_top = 604.376
margin_right = 1078.8
margin_bottom = 680.376
custom_fonts/normal_font = ExtResource( 3 )
text = "Music Volume"

[node name="Back" type="Button" parent="Settings"]
margin_left = 808.799
margin_top = 315.991
margin_right = 1061.8
margin_bottom = 457.991
custom_fonts/font = ExtResource( 1 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="Settings/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="Settings/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
